--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   },
   "homepage": "https://github.com/EfimGoldfinch/express-mesto-gha#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.20"
   }
 }
